fix strange overflow scroll on invisibile element

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -75,6 +75,13 @@ body {
 }
 
 @media (max-width: 767.98px) {
+
+    /* Remove weird horizontal scroll at xs viewport */
+    body {
+        width: 100vw;
+        overflow-x: hidden;
+    }
+
     .detail {
         padding: 2px 5px 0;
     }
